[tool.poetry]
name = "ai-langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["tony2cssc <jijing.guo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.1.0"
notebook = "^7.1.2"
beautifulsoup4 = "^4.12.3"
panda = "^0.3.1"
faiss-cpu = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
